--- a/CatchPhraseF/CatchPhraseF/CatchPhraseF.csproj
+++ b/CatchPhraseF/CatchPhraseF/CatchPhraseF.csproj
@@ -46,28 +46,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddAuthor.cs">
+    <Compile Include="Forms\AddAuthor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddAuthor.Designer.cs">
+    <Compile Include="Forms\AddAuthor.Designer.cs">
       <DependentUpon>AddAuthor.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddPhrase.cs">
+    <Compile Include="Forms\AddPhrase.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddPhrase.Designer.cs">
+    <Compile Include="Forms\AddPhrase.Designer.cs">
       <DependentUpon>AddPhrase.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddSource.cs">
+    <Compile Include="Forms\AddSource.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddSource.Designer.cs">
+    <Compile Include="Forms\AddSource.Designer.cs">
       <DependentUpon>AddSource.cs</DependentUpon>
     </Compile>
-    <Compile Include="AutorsInfo.cs">
+    <Compile Include="Forms\AddTheme.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AutorsInfo.Designer.cs">
+    <Compile Include="Forms\AddTheme.Designer.cs">
+      <DependentUpon>AddTheme.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AutorsInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AutorsInfo.Designer.cs">
       <DependentUpon>AutorsInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Form1.cs">
@@ -82,24 +88,28 @@
     <Compile Include="Model\PList.cs" />
     <Compile Include="Model\SList.cs" />
     <Compile Include="Model\Source.cs" />
+    <Compile Include="Model\TList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SourcesInfo.cs">
+    <Compile Include="Forms\SourcesInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SourcesInfo.Designer.cs">
+    <Compile Include="Forms\SourcesInfo.Designer.cs">
       <DependentUpon>SourcesInfo.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddAuthor.resx">
+    <EmbeddedResource Include="Forms\AddAuthor.resx">
       <DependentUpon>AddAuthor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddPhrase.resx">
+    <EmbeddedResource Include="Forms\AddPhrase.resx">
       <DependentUpon>AddPhrase.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddSource.resx">
+    <EmbeddedResource Include="Forms\AddSource.resx">
       <DependentUpon>AddSource.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AutorsInfo.resx">
+    <EmbeddedResource Include="Forms\AddTheme.resx">
+      <DependentUpon>AddTheme.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AutorsInfo.resx">
       <DependentUpon>AutorsInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
@@ -114,7 +124,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SourcesInfo.resx">
+    <EmbeddedResource Include="Forms\SourcesInfo.resx">
       <DependentUpon>SourcesInfo.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\DataSources\CatchPhraseF.Model.Author.datasource" />
